fix alignment issues

--- a/css/chart-style.css
+++ b/css/chart-style.css
@@ -4,5 +4,5 @@
 
 .chart-div{
     flex-grow:1;
-    width: 100%;
+    width: 90%;
 }
